# bid_agent

./: .env.example  .env.production.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml  start.sh  sync_adb.sh  sync_all.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements-sync.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  696cef558d26_add_search_vector_trigger.py  78e8d802ab2c_initial_schema.py  a1b2c3d4e5f6_add_is_verified_to_users.py  b2c3d4e5f6a1_add_bid_analysis_columns.py  c3d4e5f6a1b2_add_combined_ai_overview_to_projects.py  d4e5f6a1b2c3_add_start_date_to_bid_plan_tasks.py  e5f6a1b2c3d4_add_analysis_dimensions.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  embedding_client.py  llm_client.py  rag.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  credits.py  email.py  exceptions.py  middleware.py  security.py
backend/app/crawlers/: __init__.py  adb.py  base.py  ungm.py  wb.py
backend/app/fetchers/: __init__.py  adb.py  afdb.py  base.py  worldbank.py
backend/app/models/: __init__.py  bid_analysis.py  bid_document.py  bid_plan.py  budget.py  expert.py  knowledge_base.py  opportunity.py  payment.py  project.py  project_document.py  stats.py  translation.py  user.py
backend/app/schemas/: __init__.py  admin.py  checklist.py  (+6 more)
backend/scripts/: build_afdb_kb.py  build_kb.py  email_template_verify.html  export_adb.py  export_tenders.py  generate_wb_data.py  import_tenders.py  run_crawler.py  run_fetcher.py  seed_opportunities.py
backend/tests/: conftest.py
(+279 files in other folders)
