[project]
name = "bid-agent-backend"
version = "2.0.0"
description = "BidAgent V2 — AI-powered bidding platform backend"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function call in default argument — FastAPI Depends() pattern
    "RUF001", # ambiguous unicode — Chinese comments are intentional
    "N818",   # exception name should end with Error — our convention uses Exception
    "B905",   # zip without explicit strict — not critical
    "UP035",  # deprecated typing imports — compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
